--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
 useDynLib("sglfast")
 importFrom("stats", "runif")
 
-export(isgl, isgl_simple, solve_inner_problem, predict.isgl, isgl_rs)
+export(isgl, isgl_simple, solve_inner_problem, predict.isgl, isgl_rs, isgl_simple_rs)
